4.0
	+ Moved configuration from NTP menu to System -> Date/Time
	+ Set version to 4.0
	+ Fix sign NTP packets when samba is enabled
3.5
	+ Set version to 3.5
3.4
	+ Better control of stopping daemon before syncing time
	+ Adapted apparmor configuration to Saucy
	+ Save module config after initialSetup
	+ Use service instead of deprecated invoke-rc.d for init.d scripts
	+ Set version to 3.4
3.3
	+ Switch from Error to TryCatch for exception handling
	+ Delete migration code from old versions
	+ Set version to 3.3
3.2
	+ Set version to 3.2
3.1.2
	+ Override daemons when migrating from 3.0
3.1.1
	+ Added menu icon
3.1
	+ Implemented _daemonsToDisable()
	+ Depend on zentyal-core 3.1
3.0.1
	+ Samba clients can now sync clock with ntp
2.3.8
	+ NTP port is open to internal networks by default
2.3.7
	+ Use more than 3 NTP servers if specified
2.3.6
	+ enable-module script does not fail if ntp if-up script or
	  dhclient hook does not exist
2.3.5
	+ Adapted to new Model management framework
	+ Use new services API
2.3.4
	+ Packaging fixes for precise
2.3.1
	+ Updated Standards-Version to 3.9.2
2.3
	+ Replaced autotools with zbuildtools
2.1.7
	+ Disable also ntp daemon on dhclient hook
2.1.6
	+ Disable ntp daemon executed by Ubuntu networking services during boot
2.1.5
	+ Avoid duplicated restart during postinst
2.1.4
	+ Fixed problems saving changes after disable
	+ Remove obsolete setService and _configureFirewall methods
2.1.3
	+ NTP settings are now top-level under Infrastructure
	+ Date/Time and Timezone are now under System -> General
	+ Modelized CGIs and move DateTime and Timezone to core
2.1.2
	+ Set proper menu order
2.1.1
	+ More robust default values for external servers
	+ Removed obsolete gconf dependency
2.1
	+ Use new standard enable-module script
	+ Remove migration and use initialSetup
	+ Replace ebox-timezone-import with importTimezone method
	+ Bug fix: drift can be recalculated now
2.0.1
	+ Bug fix: _restartAllServices method now works properly
1.5.2