@@ -1,3 +1,5 @@
+HEAD
+	+ Fixed bug when samba module is not installed
 4.0
 	+ Moved configuration from NTP menu to System -> Date/Time
 	+ Set version to 4.0
